--- a/www/templates/AddDoors.html
+++ b/www/templates/AddDoors.html
@@ -17,11 +17,11 @@
     </ion-content>
         <div class="tabs tabs-dark tabs-icon-top">
             <a class="tab-item">
-                <i class="icon ion-arrow-left-a"></i>
+                <i class="icon ion-arrow-left-a" ng-click="goBack()"></i><!--ng-click="bedroomSize(user)"-->
                 BACK
             </a>
             <a class="tab-item">
-                <i class="icon ion-arrow-right-a"></i>
+                <i class="icon ion-arrow-right-a" ng-click="addWindows(user)"></i>
                 NEXT
             </a>
         </div>
