--- a/www/templates/BedroomSize.html
+++ b/www/templates/BedroomSize.html
@@ -16,7 +16,7 @@
     </ion-content>
         <div class="tabs tabs-dark tabs-icon-top">
             <a class="tab-item">
-                <i class="icon ion-arrow-right-a" ui-sref="AddDoors"></i>
+                <i class="icon ion-arrow-right-a" ng-click="addDoors(user)"></i>
                 NEXT
                 <ion-nav-view name="AddDoors"></ion-nav-view>
             </a>
