--- a/www/templates/Layout.html
+++ b/www/templates/Layout.html
@@ -7,7 +7,7 @@
     </ion-content>
         <div class="tabs tabs-dark tabs-icon-top">
             <a class="tab-item">
-                <i class="icon ion-arrow-left-a"></i>
+                <i class="icon ion-arrow-left-a" ng-click="goBack()"></i>
                 BACK
             </a>
         </div>
