--- a/www/templates/AddFurniture.html
+++ b/www/templates/AddFurniture.html
@@ -27,11 +27,11 @@
     </ion-content>
         <div class="tabs tabs-dark tabs-icon-top">
             <a class="tab-item">
-                <i class="icon ion-arrow-left-a"></i>
+                <i class="icon ion-arrow-left-a " ng-click="goBack()"></i><!--ng-click="addWindows(user)"-->
                 BACK
             </a>
             <a class="tab-item">
-                <i class="icon ion-arrow-right-a"></i>
+                <i class="icon ion-arrow-right-a" ng-click="layout(user)"></i>
                 NEXT
             </a>
         </div>
