--- a/www/templates/addwindows.html
+++ b/www/templates/addwindows.html
@@ -20,11 +20,11 @@
     </ion-content>
         <div class="tabs tabs-dark tabs-icon-top">
             <a class="tab-item">
-                <i class="icon ion-arrow-left-a"></i>
+                <i class="icon ion-arrow-left-a" ng-click="goBack()"></i><!--ng-click="addDoors(user)"-->
                 BACK
             </a>
             <a class="tab-item">
-                <i class="icon ion-arrow-right-a"></i>
+                <i class="icon ion-arrow-right-a" ng-click="addFurniture(user)"></i>
                 NEXT
             </a>
         </div>
