--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -29,3 +29,22 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	min-height: 100%;
 	width: 100%;
 } */
+
+body {
+  cursor: url('http://ionicframework.com/img/finger.png'), auto;
+}
+.slider {
+	width: 98%;
+	height: 100%;
+}
+.slider-slide {
+  padding-bottom: 80px;
+  //padding: 80px;
+  color: #000;
+  background-color: #fff;
+  text-align: center;
+
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300;
+}
+
