--- a/www/templates/AddDoors.html
+++ b/www/templates/AddDoors.html
@@ -1,18 +1,41 @@
 <ion-view title="Add Doors">
     <ion-content padding="'true'" class="has-header">
-        <div>
-            <p>You can size the door using the height and width range below and select where to position them.</p>
-        </div>
-        <form class="list"></form>
         <form class="list">
-            <label class="item item-input">
-                <span class="input-label">Width</span>
-                <input type="text" placeholder="">
-            </label>
-            <label class="item item-input">
-                <span class="input-label">Height</span>
-                <input type="text" placeholder="">
-            </label>
+            <div>
+                <p>You can size the door by providing the inputs for width and length and select where to position them. Reason we need to know the width and length of the door is for a more precise measurement when door is fully opened. Add to position more doors or minus to remove door.</p>
+            </div>
+            <div class="row">
+                <div class="col-45">
+                    <label class="item item-input">
+                        <span class="input-label">Width</span>
+                        <input type="tel" placeholder="">
+                    </label>
+                </div>
+                <div class="col-45 col-offset-10">
+                    <label class="item item-input">
+                        <span class="input-label">Length</span>
+                        <input type="tel" placeholder="">
+                    </label>
+                </div>
+            </div>
+             <div class="row row-center">
+                <div class="col col-offset-25">
+                    <p>Room shows up below.</p> 
+                </div>
+            </div> 
+            <div class="row row-bottom">
+                <div class="col">
+                    <img src="http://placehold.it/280x150">
+                </div> 
+            </div> 
+            <div class="row row-bottom">
+                <div class="col-10 col-offset-75">
+                    <button class="button button-stable button-icon button-large icon-right ion-minus-circled"></button>
+                </div>
+                <div class="col-10">
+                    <button class="button button-stable button-icon button-large icon-right ion-android-add-circle"></button>
+                </div>
+            </div>           
         </form>
     </ion-content>
         <div class="tabs tabs-dark tabs-icon-top">
