--- a/www/templates/Layout.html
+++ b/www/templates/Layout.html
@@ -1,14 +1,21 @@
 <ion-view title="Layout">
     <ion-content padding="'true'" class="has-header">
-        This page will display the images of the different furniture layouts you can have in your bedroom.
-        <div style="line-height: 250px; border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; width: 100%; height: auto; background-color: rgb(255, 255, 255);">
-            <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
-        </div>
+        <p>This page will display the images of the different furniture layouts you can have in your bedroom.</p>
+
+        <ion-slide-box does-continue="true" 
+                         show-pager='true'
+                         slide-interval="3000"
+                         auto-play="false"
+                         on-slide-changed="slideChanged(index)">
+            <ion-slide ng-repeat="slide in slides">
+                <div class="slide"><img src="{{slide.src}}" alt=""/><h3>{{slide.name}}</h3></div>
+            </ion-slide>
+        </ion-slide-box>
     </ion-content>
-        <div class="tabs tabs-dark tabs-icon-top">
-            <a class="tab-item">
-                <i class="icon ion-arrow-left-a" ng-click="goBack()"></i>
-                BACK
-            </a>
-        </div>
+    <div class="tabs tabs-dark tabs-icon-top">
+        <a class="tab-item">
+            <i class="icon ion-arrow-left-a" ng-click="goBack()"></i>
+            BACK
+        </a>
+    </div>
 </ion-view>
