--- a/www/templates/BedroomSize.html
+++ b/www/templates/BedroomSize.html
@@ -1,40 +1,50 @@
 <ion-view title="Bedroom Size">
-    <ion-content padding="'true'" class="has-header">
-        <form class="list">
-            <div>
-                <p>You can input the size of your room by providing the width and length below. All measurements will be taken in by inches so please make sure to provide measurements in inches.</p>
-            </div>
-            <div class="row">
-                <div class="col-45">
-                    <label class="item item-input">
-                        <span class="input-label">Width</span>
-                        <input type="tel" placeholder="">
-                    </label>
-                </div>
-                <div class="col-45 col-offset-10">
-                    <label class="item item-input">
-                        <span class="input-label">Length</span>
-                        <input type="tel" placeholder="">
-                    </label>
-                </div>
-            </div>
-            <div class="row row-center">
-                <div class="col col-offset-25">
-                    <p>Room shows up below.</p> 
-                </div>
-            </div> 
-            <div class="row row-bottom">
-                <div class="col">
-                    <img src="http://placehold.it/280x150">
-                </div> 
-            </div> 
-        </form>
-    </ion-content>
-        <div class="tabs tabs-dark tabs-icon-top">
-            <a class="tab-item">
-                <i class="icon ion-arrow-right-a" ng-click="addDoors(user)"></i>
-                NEXT
-                <ion-nav-view name="AddDoors"></ion-nav-view>
-            </a>
+  <ion-content padding="'true'" class="has-header">
+    <form name="roomform" class="list">
+      <div>
+        <p>You can input the size of your room by providing the width and length below. All measurements will be taken in by inches so please make sure to provide measurements in inches.</p>
+      </div>
+      <div class="row">
+        <div class="col-45">
+          <label class="item item-input">
+            <span class="input-label">Width</span>
+            <input
+            name="width"
+            type="tel"
+            placeholder="in feets"
+            ng-model="room.width"
+            ng-change="drawRoom()"
+            required
+            ng-pattern="/^\d*\.?\d*$/" >
+          </label>
+          <div class="form-error assertive"
+          ng-show="roomform.width.$error.pattern">
+          Invalid Width
         </div>
+        <div class="form-error assertive"
+        ng-show="roomform.width.$error.required && roomform.width.$error.pattern">
+        Width is required
+      </div>
+      </div>
+    <div class="col-45 col-offset-10">
+      <label class="item item-input">
+        <span class="input-label">Length</span>
+        <input type="tel"
+        placeholder="in feets"
+        ng-model="room.height"
+        ng-change="drawRoom()">
+      </label>
+    </div>
+  </div>
+</form>
+<div id="room_canvas_holder" class="room-container">
+</div>
+</ion-content>
+<div class="tabs tabs-dark tabs-icon-top">
+  <a class="tab-item">
+    <i class="icon ion-arrow-right-a" ng-click="addDoors()"></i>
+    NEXT
+    <ion-nav-view name="AddDoors"></ion-nav-view>
+  </a>
+</div>
 </ion-view>
