--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -48,3 +48,55 @@ body {
   font-weight: 300;
 }
 
+#addfurniture-modal-wrapper{
+//#item-margin-control .item{margin:1%;}
+//#item-margin-control-for-length-item{margin-left:1%;}	
+
+}
+/* .ion-input-select,
+select {
+  -webkit-appearance:none;
+  background-repeat: no-repeat;
+  background-color: rgba(0,0,0,0);  
+  border:thin solid #dddddd;
+  font-weight:300;
+  display:inline;
+  vertical-align:middle;
+  color:#333;
+  padding: auto 0;
+  overflow:hidden;
+  box-sizing:border-box;
+
+}
+.ion-input-select {
+  width:200px;
+  font-size:1rem;
+  background-image: url('img/select.png');
+  text-indent:20px;
+  padding:.5rem 0;
+  background-position:-2% 0%; 
+}
+
+option {
+ // background:#444;
+}
+
+select::-ms-expand {
+    display: none;
+}
+
+:focus {
+  outline:none;
+} */
+.col-45{
+	width: 45%;
+}
+.col-55{
+	width: 55%;
+}
+
+#Add-Doors-wrapper{
+	#margin-item{
+		margin: 2%;
+	}
+}
