--- a/www/templates/Layout.html
+++ b/www/templates/Layout.html
@@ -1,5 +1,5 @@
 <ion-view title="Layout">
-    <ion-content padding="'true'" class="has-header">
+    <ion-content padding="'true'" class="has-header" scroll="false">
         <p>This page will display the images of the different furniture layouts you can have in your bedroom.</p>
 
         <ion-slide-box does-continue="true" 
