--- a/www/templates/addwindows.html
+++ b/www/templates/addwindows.html
@@ -5,16 +5,16 @@
                 <p>You can size the door by providing the inputs for width and length and select where to position them. Add to position more windows or minus to remove window.</p>
             </div>
             <div class="row">
-                <div class="col-45">
+                <div class="col col-30">
                     <label class="item item-input">
                         <span class="input-label">Width</span>
-                        <input type="tel" placeholder="">
+                        <input type="tel" placeholder="feet">
                     </label>
                 </div>
-                <div class="col-45 col-offset-10">
+                <div class="col col-30">
                     <label class="item item-input">
                         <span class="input-label">Length</span>
-                        <input type="tel" placeholder="">
+                        <input type="tel" placeholder="feet">
                     </label>
                 </div>
             </div>
