--- a/www/templates/AddDoors.html
+++ b/www/templates/AddDoors.html
@@ -1,19 +1,27 @@
-<ion-view title="Add Doors">
+<ion-view title="Add Doors" id="Add-Doors-wrapper">
   <ion-content padding="'true'" class="has-header">
     <form class="list">
       <div>
-        <p>You can size the door by providing the inputs for width and length and select where to position them. Reason we need to know the width and length of the door is for a more precise measurement when door is fully opened. Add to position more doors or minus to remove door.</p>
+        <p>You can size the door by providing the inputs for width and length and select where to position them. Add to position more doors or minus to remove door.</p>
       </div>
       <div class="row">
-        <div class="col-35">
-          <label class="item item-input">
+        <div class="col-45">
+          <label class="item item-input" id="margin-item">
             <span class="input-label">Width</span>
-            <input type="tel" ng-model="door.width" placeholder="in feet" ng-change="addDoor()">
+            <input type="tel" ng-model="door.width" placeholder="feet" ng-change="addDoor()">
           </label>
         </div>
 
-        <div class="col-50 col-offset-10">
-          <label class="item item-input item-select">
+<!--         <div class="col col-30">
+            <select class="ion-input-select">
+              <option>Type</option>
+              <option>Single</option>
+              <option>Double</option>
+              <option>Sliding</option>
+            </select>
+        </div>   -->
+        <div class="col-55">
+          <label class="item item-input item-select" id="margin-item">
             <span class="input-label">Type</span>
             <select id="doortypelist" ng-model="item" ng-change="addDoor()">
               <option>Single</option>
@@ -24,7 +32,6 @@
         </div>
       </div>
     </form>
-
     <div class="room-container" style="width:"{{roomwidth}}";height:"{{roomheight}}"" >
       <canvas width="{{roomwidth}}" height="{{roomheight}}" style="border:5px solid black;"> </canvas>
     </div>
