--- a/www/templates/AddFurniture.html
+++ b/www/templates/AddFurniture.html
@@ -1,44 +1,17 @@
 <ion-view title="Add Furniture">
+    <ion-nav-buttons side="right">
+        <button menu-toggle="left" class="button button-clear icon ion-android-add" ng-click="openModal()"></button>
+    </ion-nav-buttons>
     <ion-content padding="'true'" class="has-header">
-        <form class="list">
-            <div>
-                <p>Input the width, length and name of your furniture. Add to list more furniture or minus to remove furniture.</p>
+        <div class="card">
+            <div class="item item-divider">
+                <p><b>{{header}}Bed</b></p>
             </div>
-            <div class="row">
-                <div class="col-40">
-                    <label class="item item-input">
-                        <span class="input-label">Width</span>
-                        <input type="tel" placeholder="">
-                    </label>
-                </div>
-                <div class="col-40 col-offset-10">
-                    <label class="item item-input">
-                        <span class="input-label">Height</span>
-                        <input type="tel" placeholder="">
-                    </label>
-                </div>
+            <div class="item item-text-wrap">
+                <p>Width = {{width}}20 feet</p>
+                <p>Length = {{length}}20 feet</p>
             </div>
-            <label class="item item-input">
-                <span class="input-label">Name</span>
-                <input type="text" placeholder="">
-            </label>
-            <label class="item item-input">
-                <span class="input-label">Name of Furniture</span>
-                <input type="text" placeholder="">
-            </label>
-            <label class="item item-input">
-                <span class="input-label">Name of Furniture</span>
-                <input type="text" placeholder="">
-            </label>
-            <div class="row row-bottom">
-                <div class="col-10 col-offset-75">
-                    <button class="button button-stable button-icon button-large icon-right ion-minus-circled"></button>
-                </div>
-                <div class="col-10">
-                    <button class="button button-stable button-icon button-large icon-right ion-android-add-circle"></button>
-                </div>
-            </div>           
-        </form>        
+        </div>  
     </ion-content>
         <div class="tabs tabs-dark tabs-icon-top">
             <a class="tab-item">
