--- a/www/templates/BedroomSize.html
+++ b/www/templates/BedroomSize.html
@@ -1,4 +1,9 @@
-<ion-view title="Bedroom Size">
+<ion-view>
+<ion-nav-bar class="bar-dark">
+<ion-nav-title>
+      Bedroom Size
+    </ion-nav-title>
+</ion-nav-bar>
   <ion-content padding="'true'" class="has-header">
     <form name="roomform" class="list">
       <div>
