--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -51,3 +51,29 @@
   // Animations
   "animations",
   "transitions";
+
+.drag
+{
+width: 100px;
+height: 100px;
+min-height : 6.5em;
+margin: 10%;
+background-color : blue;
+color: white;
+padding: 4%;
+
+-webkit-transform: translate(0px,0px);
+transform: translate(0px,0px);
+}
+
+.newdrag
+{
+margin: 10%;
+background-color : blue;
+color: white;
+padding: 4%;
+overflow: hidden;
+-webkit-transform: translate(0px,0px);
+transform: translate(0px,0px);
+}
+
