--- a/www/templates/AddFurniture-modal.html
+++ b/www/templates/AddFurniture-modal.html
@@ -1,12 +1,12 @@
   <ion-modal-view id="addfurniture-modal-wrapper">
-  	<header class="bar bar-header bar-dark">
+    <header class="bar bar-header bar-dark">
 		<div class="button button-clear icon ion-close" ng-click="modal.hide()"></div>
 		<h1 class="title"></h1>
 		<div class="button button-clear icon ion-android-add" ng-click=""></div>
 	</header>
-    <ion-content has-header="true" padding="true">
-    	<form class="list">
-            <div>
+    <ion-content padding="'true'" class="has-header">
+    	<form name="furnitureform" class="list">
+            <div id="width-control">
                 <p>Input the width, length and name of your furniture. Add to list more furniture or minus to remove furniture.</p>
             </div>
             <div class="row" id="item-margin-control">
@@ -34,14 +34,34 @@
                 <div class="col col-30">
                     <label class="item item-input">
                         <span class="input-label">Width</span>
-                        <input type="tel" placeholder="">
+                        <input
+                        name="width"
+                        type="tel"
+                        placeholder="feet"
+                        ng-model="furniture.width"
+                        required
+                        ng-pattern="/^\d*\.?\d*$/" >
                     </label>
                 </div>
                 <div class="col col-30" id="item-margin-control-for-length-item">
                     <label class="item item-input">
                         <span class="input-label">Length</span>
-                        <input type="tel" placeholder="">
+                        <input type="tel"
+                        name="length"
+                        placeholder="feet"
+                        ng-model="furniture.length"
+                        required
+                        ng-pattern="/^\d*\.?\d*$/">
                     </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center form-error assertive text-center"
+                ng-show="furnitureform.width.$error.pattern || furnitureform.length.$error.pattern">
+                  Invalid Input
+                </div>
+                <div class="col text-center form-error assertive" ng-show="furnitureform.width.$error.required && furnitureform.width.$error.pattern || furnitureform.length.$error.required && furnitureform.length.$error.pattern">
+                  Width is required
                 </div>
             </div>
             <div class="row row-bottom">
@@ -53,5 +73,5 @@
                 </div>
             </div>           
         </form>        
-    </ion-content>
+    </ion-pane>
   </ion-modal-view>
