--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7723,41 +7723,33 @@ body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300; }
 
-/* .ion-input-select,
-select {
-  -webkit-appearance:none;
+.ion-input-select, select {
   background-repeat: no-repeat;
-  background-color: rgba(0,0,0,0);  
-  border:thin solid #dddddd;
-  font-weight:300;
-  display:inline;
-  vertical-align:middle;
-  color:#333;
+  background-color: transparent;
+  border: thin solid #dddddd;
+  font-weight: 300;
+  display: inline;
+  vertical-align: middle;
+  color: #333;
   padding: auto 0;
-  overflow:hidden;
-  box-sizing:border-box;
+  overflow: hidden;
+  box-sizing: border-box; }
 
-}
 .ion-input-select {
-  width:200px;
-  font-size:1rem;
+  width: 100%;
+  font-size: 1rem;
   background-image: url('img/select.png');
-  text-indent:20px;
-  padding:.5rem 0;
-  background-position:-2% 0%; 
-}
-
-option {
- // background:#444;
-}
+  text-indent: 20%;
+  padding: .8rem 0;
+  background-position: -2% 0%;
+  height: 100%; }
 
 select::-ms-expand {
-    display: none;
-}
+  display: none; }
 
 :focus {
-  outline:none;
-} */
+  outline: none; }
+
 .col-45 {
   width: 45%; }
 
@@ -7766,3 +7758,10 @@ select::-ms-expand {
 
 #Add-Doors-wrapper #margin-item {
   margin: 2%; }
+
+#width-control {
+  width: 92%;
+  margin: 4%; }
+
+.text-center {
+  text-align: center; }
